# Destroy-DS-Store

./: Cargo.toml  README.md
src/: command_line.rs  main.rs
